<resources>
    <string name="app_name">Cravings</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Email Address</string>
    <string name="reset">RESET</string>
    <string name="code">Code</string>
    <string name="resend">Resend</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="verify">VERIFY</string>
</resources>