<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/primary_green"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/cravings_logo"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp"
        android:hint="@string/username"
        android:textColorHint="#DCE40C"
        android:textSize="18sp"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:textColorHint="#DCE40C"
        android:textSize="18sp"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/primary_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/rounded_buttons"
        android:layout_gravity="center"
        android:layout_margin="30dp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_margin="30dp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_gravity="center"/>

</LinearLayout>