<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPasswordActivity"
    android:background="@color/primary_green"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/cravings_logo"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:textColorHint="#DCE40C"
        android:textSize="18sp"
        android:padding="15dp" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:textColorHint="#DCE40C"
        android:textSize="18sp"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/primary_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/rounded_buttons"
        android:layout_gravity="center"
        android:layout_margin="30dp"/>

</LinearLayout>